<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        style="@style/wrap" />

    <com.elysiant.myflickr.ui.common.LoadingIndicatorView
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:shade="dark" />

    <TextView
        android:id="@+id/no_results_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal"
        android:text="@string/search_no_results_response"
        android:textColor="@color/black_1"
        android:textSize="@dimen/general_text_size"
        android:visibility="invisible" />

</RelativeLayout>
